Tue Jan 26 07:57:28 2016  Joseph Tibbertsma  <josephtibbertsma@gmail.com>

	* gc.c (RVALUE_PAGE_WB_UNPROTECTED): fix a typo of argument name.
	  [Fix GH-1221]

Mon Jan 25 17:26:54 2016  Eric Wong  <e@80x24.org>

	* ruby_assert.h (RUBY_ASSERT_WHEN): fix reference to macro name
	* vm_core.h: include ruby_assert.h before using
	  [ruby-core:73371]

Mon Jan 25 15:55:30 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.c (sym_check_asciionly): more informative error message
	  with the encoding name and the inspected content.
	  [ruby-core:73398] [Feature #12016]

Mon Jan 25 09:38:26 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/ruby/test_string.rb: added testcase for next!, succ and succ!
	  [fix GH-1213] Patch by @K0mAtoru

Mon Jan 25 09:32:25 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/webrick/httpservlet/filehandler.rb: fix documentation for namespace.
	  [fix GH-1219][ci skip] Patch by @leafac

Sun Jan 24 19:34:23 2016  Eric Wong  <e@80x24.org>

	* vm_insnhelper.c (vm_check_if_namespace): tiny size reduction

Sun Jan 24 18:12:36 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Simplifying Unicode data file download logic to make
	  it more reliable (including additional fix not in r53633) [Bug #12007]

Sun Jan 24 16:54:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/wait/wait.c (io_wait_readwrite): [EXPERIMENTAL] allow to
	  wait for multiple modes, readable and writable, at once.  the
	  arguments may change in the future.  [Feature #12013]

Sat Jan 23 22:30:59 2016  K0mA  <mctj1218@gmail.com>

	* test/ruby/test_array.rb (test_keep_if): Add test for
	  Array#keep_if separate from Array#select!  [Fix GH-1218]

Sat Jan 23 20:54:26 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* common.mk: revert r53633. It broke rubyci and travis.
	  https://travis-ci.org/ruby/ruby/builds/104259623

Sat Jan 23 20:10:29 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* range.c (range_eqq): revert r51585 because rb_call_super() is